--- a/index.html
+++ b/index.html
@@ -1,2 +1,29 @@
 <!DOCTYPE html>
-<p> Hello World </p>
+<html>
+<head>
+<head/>
+<body>
+	<div class="opener">Welcome to a website concering myself, <h1>Max Hunt<h1>, and my work in the tech world.
+	</div>
+	<p> I am a final year student at Portsmouth University and for my distritation I am developing on the Pebble Platform.
+		This website and the development of my project can be found on my 
+		<h2>
+			<a href="https://github.com/MaxHunt">github
+			</a>
+		</h2>
+		. If you are intrested in employment then please contact me via 
+		<h2>
+			<a href="https://twitter.com/MaxHntTwitter">Twitter
+			</a>
+		</h2>,email with 
+		<h2>max-hunt@hotmail.co.uk
+		</h2>
+		or on 
+		<h2>
+			<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile">Linked In
+			</a>
+		</h2>
+	</p>
+</body>
+<footer>
+</footer>
