Twitter link fix

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 	<p> I am a final year student at Portsmouth University and for my distritation I am developing on the Pebble Platform.
 		This website and the development of my project can be found on my 
 		<h2>
-			<a href="https://github.com/MaxHunt">github
+			<a href="https://github.com/MaxHunt">Github
 			</a>
 		</h2>
 		. If you are intrested in employment then please contact me via 
 		<h2>
-			<a href="https://twitter.com/MaxHntTwitter">Twitter
+			<a href="https://twitter.com/MaxHnt">Twitter
 			</a>
 		</h2>,email with 
 		<h2>max-hunt@hotmail.co.uk
 		</h2>
 		or on 
 		<h2>
-			<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile">Linked In
+			<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile">LinkedIn
 			</a>
 		</h2>
 	</p>
