--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--Link to google fonts-->
+	<link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
+	<link href='css/style.css' rel='stylesheet' type='text/css'>
+	
 <head/>
 <body>
-	<div class="opener">Welcome to a website concering myself, <h1>Max Hunt<h1>, and my work in the tech world.
+	<div class="opener">Welcome to a website concering myself, <h1>Max Hunt</h1>, and my work in the tech world.
 	</div>
 	<p> I am a final year student at Portsmouth University and for my distritation I am developing on the Pebble Platform.
 		This website and the development of my project can be found on my 
 		<h2>
-			<a href="https://github.com/MaxHunt">Github
+			<a href="https://github.com/MaxHunt">GitHub
 			</a>
 		</h2>
 		. If you are intrested in employment then please contact me via 
