--- a/index.html
+++ b/index.html
@@ -4,22 +4,36 @@
 		<!--Link to google fonts-->
 		<link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
 		<link href='css/style.css' rel='stylesheet'>
+		<link href='css/font-awesome.min.css' rel='stylesheet'>
+
 		
 	</head>
 	<body>
-		<div class="opener">Welcome to a website concering myself, <h1>Max Hunt</h1>, and my work in the tech world.
+			
+		<div class="container">	
+			<img src="images/me2.jpg" alt="Me">	
+			<div class="opener">
+					Welcome to a website concerning myself, <h1>Max Hunt</h1>, and my work in the technology sector.
+			</div>		
+			<p> I am a final year student at University of Portsmouth, with my chosen dissertation topic involving the development of gesture control on the Pebble platform.</p>
+			<p> This website and the development of the artifacts (for my dissertation) can be found on my 
+				<a href="https://github.com/MaxHunt">GitHub</a>
+				. If you are intrested in employment, please contact me via 
+				<a href="https://twitter.com/MaxHnt">Twitter</a>
+				, email with 
+				<a href="mailto:max-hunt@hotmail.co.uk">max-hunt@hotmail.co.uk</a>
+				or on 
+				<a href="uk.linkedin.com/in/maxehunt">LinkedIn</a>
+				.
+			</p>
+			<footer>
+			<div class="picturelinks">
+				<a href="https://github.com/MaxHunt"><i class="fa fa-github"></i></a>
+				<a href="http://twitter.com/MaxHnt"><i class="fa fa-twitter"></i></a>			
+				<a href="mailto:max-hunt@hotmail.co.uk"><i class="fa fa-envelope"></i></a>
+				<a href="uk.linkedin.com/in/maxehunt"><i class="fa fa-linkedin"></i></a>
+        	</div>
+			</footer>
 		</div>
-		<p> I am a final year student at Portsmouth University and for my distritation I am developing on the Pebble Platform.
-			This website and the development of my project can be found on my 
-			<h2><a href="https://github.com/MaxHunt">GitHub</a></h2>
-			. If you are intrested in employment then please contact me via 
-			<h2><a href="https://twitter.com/MaxHnt">Twitter</a></h2>
-			, email with 
-			<h2>max-hunt@hotmail.co.uk</h2>
-			or on 
-			<h2><a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile">LinkedIn</a></h2>
-		</p>
-		<footer>
-		</footer>
 	</body>
 </html>
