LinkedIn link fixed

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 				, email with 
 				<a href="mailto:max-hunt@hotmail.co.uk">max-hunt@hotmail.co.uk</a>
 				or on 
-				<a href="uk.linkedin.com/in/maxehunt">LinkedIn</a>
+				<a href="http://uk.linkedin.com/in/maxehunt">LinkedIn</a>
 				.
 			</p>
 			<footer>
 			<div class="picturelinks">
 				<a href="https://github.com/MaxHunt"><i class="fa fa-github"></i></a>
-				<a href="http://twitter.com/MaxHnt"><i class="fa fa-twitter"></i></a>			
+				<a href="https://twitter.com/MaxHnt"><i class="fa fa-twitter"></i></a>			
 				<a href="mailto:max-hunt@hotmail.co.uk"><i class="fa fa-envelope"></i></a>
-				<a href="uk.linkedin.com/in/maxehunt"><i class="fa fa-linkedin"></i></a>
+				<a href="https://uk.linkedin.com/in/maxehunt"><i class="fa fa-linkedin"></i></a>
         	</div>
 			</footer>
 		</div>
