--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="opener">
 					Welcome to a website concerning myself, <h1>Max Hunt</h1>, and my work in the technology sector.
 			</div>		
-			<p> I am a final year student at University of Portsmouth, with my chosen dissertation topic involving the development of gesture control on the Pebble platform.</p>
+			<p> I am a final year student at <a href="http://www.port.ac.uk/">University of Portsmouth</a>, with my chosen dissertation topic involving the development of gesture control on the <a href="https://getpebble.com/">Pebble</a> platform.</p>
 			<p> This website and the development of the artifacts (for my dissertation) can be found on my 
 				<a href="https://github.com/MaxHunt">GitHub</a>
 				. If you are intrested in employment, please contact me via 
