--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
 		<link href='css/style.css' rel='stylesheet'>
 		<link href='css/font-awesome.min.css' rel='stylesheet'>
+		<link href="images/favicon.ico" rel="icon" >
 
 		
 	</head>
