--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 	<head>
 		<!--Link to google fonts-->
 		<link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
+		<!--Style Sheets-->
 		<link href='css/style.css' rel='stylesheet'>
 		<link href='css/font-awesome.min.css' rel='stylesheet'>
+		<!--Webstie Icon-->
 		<link href="images/favicon.ico" rel="icon" >
-
-		
+		<title>Max Hunt</title>		
 	</head>
-	<body>
-			
+
+	<body>			
 		<div class="container">	
 			<img src="images/me2.jpg" alt="Me">	
 			<div class="opener">
@@ -37,4 +38,5 @@
 			</footer>
 		</div>
 	</body>
+	
 </html>
