css changes and placeholder

--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<!--Link to google fonts-->
-		<link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
-		<!--Style Sheets-->
-		<link href='css/style.css' rel='stylesheet'>
-		<link href='css/font-awesome.min.css' rel='stylesheet'>
-		<!--Webstie Icon-->
-		<link href="images/favicon.ico" rel="icon" >
-		<title>Max Hunt</title>		
-	</head>
+   <head>
+      <!--Link to google fonts-->
+      <link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
+      <!--Style Sheets-->
+      <link href='css/style.css' rel='stylesheet'>
+      <link href='css/font-awesome.min.css' rel='stylesheet'>
+      <!--Webstie Icon-->
+      <link href="images/favicon.ico" rel="icon" >
+      <title>Max Hunt</title>    
+   </head>
 
-	<body>			
-		<div class="container">	
-			<img src="images/me2.jpg" alt="Me">	
-			<div class="opener">
-					Welcome to a website concerning myself, <h1>Max Hunt</h1>, and my work in the technology sector.
-			</div>		
-			<p> I am a final year student at <a href="http://www.port.ac.uk/">University of Portsmouth</a>, with my chosen dissertation topic involving the development of gesture control on the <a href="https://getpebble.com/">Pebble</a> platform.</p>
-			<p> This website and the development of the artifacts (for my dissertation) can be found on my 
-				<a href="https://github.com/MaxHunt">GitHub</a>
-				. If you are intrested in employment, please contact me via 
-				<a href="https://twitter.com/MaxHnt">Twitter</a>
-				, email with 
-				<a href="mailto:max-hunt@hotmail.co.uk">max-hunt@hotmail.co.uk</a>
-				or on 
-				<a href="http://uk.linkedin.com/in/maxehunt">LinkedIn</a>
-				.
-			</p>
-			<footer>
-			<div class="picturelinks">
-				<a href="https://github.com/MaxHunt"><i class="fa fa-github"></i></a>
-				<a href="https://twitter.com/MaxHnt"><i class="fa fa-twitter"></i></a>			
-				<a href="mailto:max-hunt@hotmail.co.uk"><i class="fa fa-envelope"></i></a>
-				<a href="https://uk.linkedin.com/in/maxehunt"><i class="fa fa-linkedin"></i></a>
-        	</div>
-			</footer>
-		</div>
-	</body>
-	
+   <body class="index">       
+      <div class="container index" > 
+         <img src="images/me2.jpg" alt="Me"> 
+         <div class="opener">
+               Welcome to a website concerning myself, <h1>Max Hunt</h1>, and my work in the technology sector.
+         </div>      
+         <p> I am a final year student at <a href="http://www.port.ac.uk/">University of Portsmouth</a>, with my chosen dissertation topic involving the development of gesture control on the <a href="https://getpebble.com/">Pebble</a>
+          platform.
+         </p>
+         <p> Read more about my <a href="underconstruction.html"> project</a> and the <a href="underconstruction.html">documentation</a> for my pebble apps.</p>
+         <p> This website's, my pebble app's and the artifact's code (for my dissertation) can be  can be found on my 
+            <a href="https://github.com/MaxHunt">GitHub</a>
+            . If you are intrested in employment, please contact me via 
+            <a href="https://twitter.com/MaxHnt">Twitter</a>
+            , email with 
+            <a href="mailto:max-hunt@hotmail.co.uk">max-hunt@hotmail.co.uk</a>
+            or on 
+            <a href="http://uk.linkedin.com/in/maxehunt">LinkedIn</a>
+            .
+         </p>
+         <footer>
+         <div class="picturelinks">
+            <a href="https://github.com/MaxHunt"><i class="fa fa-github"></i></a>
+            <a href="https://twitter.com/MaxHnt"><i class="fa fa-twitter"></i></a>        
+            <a href="mailto:max-hunt@hotmail.co.uk"><i class="fa fa-envelope"></i></a>
+            <a href="https://uk.linkedin.com/in/maxehunt"><i class="fa fa-linkedin"></i></a>
+         </div>
+         </footer>
+      </div>
+   </body>
+
 </html>
