--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <p> I am a final year student at <a href="http://www.port.ac.uk/">University of Portsmouth</a>, with my chosen dissertation topic involving the development of gesture control on the <a href="https://getpebble.com/">Pebble</a>
           platform.
          </p>
-         <p> Read more about my <a href="underconstruction.html"> project</a> and the <a href="underconstruction.html">documentation</a> for my pebble apps.</p>
+         <p> Read more about my <a href="underconstruction.html"> project</a> and the <a href="documentation.html">documentation</a> for my pebble apps.</p>
          <p> This website's, my pebble app's and the artifact's code (for my dissertation) can be  can be found on my 
             <a href="https://github.com/MaxHunt">GitHub</a>
             . If you are intrested in employment, please contact me via 
