Grammar and the first line

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container index" > 
          <img src="images/me2.jpg" alt="Me"> 
          <div class="opener">
-               Welcome to a website concerning myself, <h1>Max Hunt</h1>, and my work in the technology sector.
+            My name is <h1>Max Hunt</h1> and I am software developer. Favourtie postion? Back-end.
          </div>      
          <p> I am a final year student at <a href="http://www.port.ac.uk/">University of Portsmouth</a>, with my chosen dissertation topic involving the development of gesture control on the <a href="https://getpebble.com/">Pebble</a>
           platform.
