--- a/documentation.html
+++ b/documentation.html
@@ -51,14 +51,14 @@
 			<img class ="pebble" src="images/RealTimeTitleScreen.jpg" alt="Title Screen for Real Time App">
 			<div class = "details">
 				<h2> Introduction </h2>
-				<p>While I realise there are many applications, for the pebble, that do this already, I have decided to mkae my own. This was due to the fact that, as well as for my own progamming benifit, I could not find a simple monitoriting application. Also, most are written in C where as I feel a javascript verison is well nedded. 
+				<p>While I realise there are many applications, for the pebble, that do present this data already, I have decided to make my own. This was due to the fact that, as well as for my own programming benefit, I could not find a simple monitoring application. Also, most are written in C, so I felt a JavaScript version was needed.  
 				</p>
 				<h2> How it works </h2>
-				<p> Using pebble.js, once select is pressed, I look for a "Accel.on('data', callback)". These fire continuosly unitl back or select is pressed. Upon this event, I unsubscribe from the data event and return to the main screen.
+				<p> Using pebble.js, once select is pressed, I look for a "Accel.on('data', callback)". These fire continuously, until back or select is pressed. Upon this event, I unsubscribe from the data event and return to the main screen. 
 				</p>
 				<h2>Known Bugs and Future Improvements</h2>
 				<ul>
-					<li>Problems switching to and from the tracking screen and the main screen can result in a crash or forceing the app back to the tracking screen.</li>
+					<li>Problems switching to and from the tracking screen and the main screen, can result in a crash or the app being forced back to the tracking screen.</li>
 				</ul>
 			</div>
 			<div class ="appSection">
