--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           platform.
          </p>
          <p> Read more about my <a href="underconstruction.html"> project</a> and the <a href="documentation.html">documentation</a> for my pebble apps.</p>
-         <p> This website's, my pebble app's and the artifact's code (for my dissertation) can be  can be found on my 
+         <p> This websites, my pebble apps and the artifacts code (for my dissertation) can be  can be found on my 
             <a href="https://github.com/MaxHunt">GitHub</a>
             . If you are intrested in employment, please contact me via 
             <a href="https://twitter.com/MaxHnt">Twitter</a>
-            , email with 
+            ,
             <a href="mailto:max-hunt@hotmail.co.uk">max-hunt@hotmail.co.uk</a>
             or on 
             <a href="http://uk.linkedin.com/in/maxehunt">LinkedIn</a>
