--- a/documentation.html
+++ b/documentation.html
@@ -68,15 +68,19 @@
 			<img class ="pebble" src="images/snapShotTitleScreen.jpg" alt="Title Screen for Snap Shot App">
 			<div class = "details">
 				<h2> Introduction </h2>
-				<p>Blah blah blah blah Blah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blah  blah blah blahBlah blah blah blahBlah blah blah blah  blah blah blahBlah blah blah blahBlah blah blah blah  blah blah blahBlah blah blah blahBlah blah blah blah  blah blah blahBlah blah blah blahBlah blah blah blah
-				</p>
+				<p>The initial application produced to provide me with an accelerometer read out. While it does not monitor the accelerometer in real time, upon on the press on the “select” button (the middle button on the watch), it then outputs accelerometer data to do the screen. The back button can then be pressed to get back to the main screen. Once here, another measurement can be taken and so on. </p>
+
+				<p>This application also was my first introduction into the Graphical User Interface behind the pebble. Admittedly, in my limited experience in application development, I don’t really know the correct way in which to develop a GUI for an application. On the other hand, I felt like the way the Pebble goes about it, is unconventional. This is due to the use of “windows” and “cards” to control the screens with methods to hide and show them, rather than close and open. Nevertheless, it seems to work well and was easy to pick up, but I do foresee problems in future development, with many menus producing many instances of windows stacked on top of each other. </p>
+				
 				<h2> How it works </h2>
-				<p>Blah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blah
+				<p>This being my first proper application using pebble.js is very crude in the way it works. However, it was a learning curve into the documentation and various applications for the accelerometer. 
+				The app works by retrieving the first sample of the array produced on the data event at the time of the click of the select button. Being relatively simple, it only takes up 54 lines of code, including spaces. Many console logs also allow for tracking in the console output.
+
 				</p>
 				<h2>Known Bugs and Future Improvements</h2>
 				<ul>
-					<li>Blah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blah</li>
-					<li>Blah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blah</li>
+					<li>Nothing to report, all issues solved so far.</li>
+					
 				</ul>
 			</div>  
 			<footer>
