--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           platform.
          </p>
          <p> Read more about my <a href="underconstruction.html"> project</a> and the <a href="documentation.html">documentation</a> for my pebble apps.</p>
-         <p> This websites, my pebble apps and the artifacts code (for my dissertation) can be  can be found on my 
+         <p> This website, my pebble applications and the artifact code (for my dissertation) can be  can be found on my 
             <a href="https://github.com/MaxHunt">GitHub</a>
             . If you are intrested in employment, please contact me via 
             <a href="https://twitter.com/MaxHnt">Twitter</a>
