--- a/underconstruction.html
+++ b/underconstruction.html
@@ -19,16 +19,16 @@
 					Page Currently Under Construction
 					<i class="fa fa-ban"></i></h1>
 			</div>
-			<p> This website's, my pebble app's and the artifact's code (for my dissertation) can be  can be found on my 
-				<a href="https://github.com/MaxHunt">GitHub</a>
-				. If you are intrested in employment, please contact me via 
-				<a href="https://twitter.com/MaxHnt">Twitter</a>
-				, email with 
-				<a href="mailto:max-hunt@hotmail.co.uk">max-hunt@hotmail.co.uk</a>
-				or on 
-				<a href="http://uk.linkedin.com/in/maxehunt">LinkedIn</a>
-				.
-			</p>
+			<p> Read more about my <a href="underconstruction.html"> project</a> and the <a href="documentation.html">documentation</a> for my pebble apps.</p>
+         	<p> This website, my pebble applications and the artifact code (for my dissertation) can be  can be found on my 
+            <a href="https://github.com/MaxHunt">GitHub</a>
+            . If you are intrested in employment, please contact me via 
+            <a href="https://twitter.com/MaxHnt">Twitter</a>
+            ,
+            <a href="mailto:max-hunt@hotmail.co.uk">max-hunt@hotmail.co.uk</a>
+            or on 
+            <a href="http://uk.linkedin.com/in/maxehunt">LinkedIn</a>
+            .
 			<footer>
 			<div class="picturelinks">
 				<a href="https://github.com/MaxHunt"><i class="fa fa-github"></i></a>
