--- a/documentation.html
+++ b/documentation.html
@@ -52,7 +52,7 @@
 				<h2>Known Bugs and Future Improvements</h2>
 				<ul>
 					<li>False Positives</li>
-					<li>Shaking not diregarded</li>					
+					<li>Shakeing not disregarded</li>					
 				</ul>
 			</div>
 
