--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
       <div class="container index" > 
          <img src="images/me2.jpg" alt="Me"> 
          <div class="opener">
-            My name is <h1>Max Hunt</h1> and I am software developer.
+            My name is <h1>Max Hunt</h1> and I am software developer. I am currenlty employeed with <a href="https://airbusdefenceandspace.com">Airbus Space & Defence </a>
          </div>      
-         <p> I am a final year student at <a href="http://www.port.ac.uk/">University of Portsmouth</a>, with my chosen dissertation topic involving the development of gesture control on the <a href="https://getpebble.com/">Pebble</a>
-          platform.
+         <p> I am a graduate student from the <a href="http://www.port.ac.uk/">University of Portsmouth</a>. My chosen dissertation topic involving the development of gesture control on the <a href="https://getpebble.com/">Pebble</a> platform.
          </p>
-         <p> Read more about my <a href="underconstruction.html"> project</a> and the <a href="documentation.html">documentation</a> for my pebble apps.</p>
+         <p> Read my <a href="underconstruction.html"> distritation </a> and other <a href="underconstruction.html">papers</a> I wrote during university and the <a href="documentation.html">documentation</a> for my pebble applications.</p>
          <p> This website, my pebble applications and the artifact code (for my dissertation) can be  can be found on my 
             <a href="https://github.com/MaxHunt">GitHub</a>
-            . If you are intrested in employment, please contact me via 
+            . If you are intrested in contacting me, please contact me via 
             <a href="https://twitter.com/MaxHnt">Twitter</a>
             ,
             <a href="mailto:max-hunt@hotmail.co.uk">max-hunt@hotmail.co.uk</a>
