Addtion of new page
addition of new page and spelling errors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          </div>      
          <p> I am a graduate student from the <a href="http://www.port.ac.uk/">University of Portsmouth</a>. My chosen dissertation topic involving the development of gesture control on the <a href="https://getpebble.com/">Pebble</a> platform.
          </p>
-         <p> Read my <a href="underconstruction.html"> dissertation </a> and other <a href="underconstruction.html">papers</a> I wrote during university and the <a href="documentation.html">documentation</a> for my pebble applications.</p>
+         <p> Read my <a href="dissertation.html"> dissertation </a> and other <a href="dissertation.html">papers</a> I wrote during university and the <a href="documentation.html">documentation</a> for my pebble applications.</p>
          <p> This website, my pebble applications and the artifact code (for my dissertation) can be  can be found on my 
             <a href="https://github.com/MaxHunt">GitHub</a>
             . If you are intrested in contacting me, please contact me via 
