--- a/dissertation.html
+++ b/dissertation.html
@@ -28,45 +28,12 @@
 				<h1 class="appTitle">Dissertation</h1>        
 				<a class="titleIcon" href="https://github.com/MaxHunt/NoiseMonitorPebble"><i class="fa fa-github"></i></a>
 			</div>
-			<img class ="pebble" src="images/NoiseMonitorTitle.jpg" alt="Title Screen for Noise Monitor App">
 			<div class = "details">
 			<h2> Abstract </h2>
 			<p> Wearable devices are ever more present in today‟s technology market. These devices integrate with smart phones with the intent to make our data more accessible. However, the way we interact with that data is still the same on wearable devices, tapping on a screen or pressing buttons. In order for wearable technology to improve the ease of use of our smart devices, a technology must be found that is natural and easy for a user to operate. This project suggests gesture control as the solution. By building a library, Gebble.js, that implements gesture control for the Pebble smart watch, it allows developers to become more involved with gesture control. Instead of creating just another application, they could build a better user experience utilising a more natural way for consumers to interact with their data.
-			</p>			
-			</div>
-			<div class ="appSection">
-				<h1 class="appTitle">Real Time Accel</h1>        
-				<a class="titleIcon" href="https://github.com/MaxHunt/Real-Time-Accel-App"><i class="fa fa-github"></i></a>
-			</div>
-			<img class ="pebble" src="images/RealTimeTitleScreen.jpg" alt="Title Screen for Real Time App">
-			<div class = "details">
-			<h2> Introduction </h2>
-			<p>Blah blah blah blah Blah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blah
 			</p>
-			<h2> How it works </h2>
-			<p>Blah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blah
-			</p>
-			<h2>Known Bugs and Future Improvements</h2>
-			<ul>
-				<li>Blah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blah</li>
-				<li>Blah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blahBlah blah blah blah</li>
-			</ul>
-			</div> 
-
-			<div class ="appSection">
-				<h1 class="appTitle">Accelerometer Snap Shot</h1>
+			<a href="documents/Improving the Ease of Use on Smart Watches, with Gesture Control.pdf"><h2>Download the document</h2></a>			
 			</div>
-
-			
-
-			<div class ="appSection">
-				<h1 class="appTitle">Wrist Twist</h1>
-			</div>
-
-			<div class ="appSection">
-				<h1 class="appTitle">Guesture Libary</h1>
-			</div>
-
 			<footer>
 			<div class="picturelinks">
 				<a href="https://github.com/MaxHunt"><i class="fa fa-github"></i></a>
