--- a/dissertation.html
+++ b/dissertation.html
@@ -17,19 +17,14 @@
 			<a href="index.html"><i class="fa fa-long-arrow-up"></i></a>			
 			<h1 class="head"> Documents from my degree </h1>	
 			<div class="opener navigate">
-					<a href="">| Dissertation |</a>S
-					<a href="">| Real Time Accel |</a>
-					<a href="">| Noise Monitor |</a>
-					<a href="">| Wrist Twist | </a>
-					<a href="">| Guesture Libary |</a>
+					<a href="">| Dissertation |</a>					
 			</div>
 
 			<div class ="appSection">
-				<h1 class="appTitle">Dissertation</h1>        
-				<a class="titleIcon" href="https://github.com/MaxHunt/NoiseMonitorPebble"><i class="fa fa-github"></i></a>
+				<h1 class="appTitle">Dissertation</h1>
 			</div>
 			<div class = "details">
-			<h2> Abstract </h2>
+			<h2> Abstract for Improving the Ease of Use on Smart Watches, with Gesture Control </h2>
 			<p> Wearable devices are ever more present in today‟s technology market. These devices integrate with smart phones with the intent to make our data more accessible. However, the way we interact with that data is still the same on wearable devices, tapping on a screen or pressing buttons. In order for wearable technology to improve the ease of use of our smart devices, a technology must be found that is natural and easy for a user to operate. This project suggests gesture control as the solution. By building a library, Gebble.js, that implements gesture control for the Pebble smart watch, it allows developers to become more involved with gesture control. Instead of creating just another application, they could build a better user experience utilising a more natural way for consumers to interact with their data.
 			</p>
 			<a href="documents/Improving the Ease of Use on Smart Watches, with Gesture Control.pdf"><h2>Download the document</h2></a>			
